# prusti-dev

./: .env  Cargo.toml  viper-toolchain
prusti-common/: Cargo.toml
prusti-common/src/report/: log.rs
prusti-pretti-report/: Cargo.toml
prusti-pretti-report/src/: main.rs  process.rs  template.html
prusti-pretti-report/tests/: eg.json
prusti-pretti-report/tests/test-crate/: Cargo.toml
prusti-pretti-report/tests/test-crate/src/: main.rs
prusti-viper/src/encoder/: encoder.rs  procedure_encoder.rs  pure_function_encoder.rs
prusti/src/: callbacks.rs  driver.rs
viper/tests/: pretty_print.rs
