[package]
name = "prusti-pretti-report"
version = "0.1.0"
edition = "2018"
authors = [
	"Alex Koz. <a@koz.email",
	"Egor Rusakov <fibletyp@mail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

execute = "0.2.9"
structopt = "0.3.22"
process_path = "0.1.3"

prusti-launch = { path = "../prusti-launch" }
